# bs-gen

./: .gitignore  Dockerfile  README.md  bs-gen.cabal
.github/workflows/: ci.yml  docker-image.yml
src/: Main.hs  Testimonial.hs
