name:                bs-gen
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Markus Rother
maintainer:          mail@markusrother.de
category:            Game
build-type:          Simple
cabal-version:       >=1.2

executable bs-gen
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs

  build-depends:       base             >= 4.7          && < 4.9,
                       bytestring       >= 0.9.1        && < 0.11,
                       snap-core        >= 0.9          && < 0.10,
                       snap-server      >= 0.9          && < 0.10,
                       transformers     >= 0.4.3.0,
                       split            >= 0.2.2,
                       random           >= 1.1
