name:                bs-gen
version:             0.1.2.0
license:             GPL-3
license-file:        LICENSE
author:              Markus Rother
maintainer:          mail@markusrother.de
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable bs_gen
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs

  build-depends:       base             >= 4.10,
                       bytestring       >= 0.10,
                       snap-core        >= 1.0.3,
                       snap-server      >= 1.0.3,
                       QuickCheck       >= 2.10
